# pasteli

./: README.md  pyproject.toml  setup.py
pasteli/: __init__.py  constants.py  core.py  errors.py  require.py  utils.py
